--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,5 +1,6 @@
 fixtures:
   repositories:
+    "stdlib": "https://github.com/puppetlabs/puppetlabs-stdlib"
     "puppi": "git://github.com/example42/puppi.git"
     "monitor": "git://github.com/example42/puppet-monitor.git"
     "firewall": "git://github.com/example42/puppet-firewall.git"
